<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g300">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionProgressTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:letterSpacing="0.05"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                tools:text="Question 1/20" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/previousButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:letterSpacing="0.05"
                    android:textColor="@drawable/question_navigation_button_colour"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    android:text="@string/previous_btn_txt" />

                <TextView
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:background="?attr/selectableItemBackground"
                    android:letterSpacing="0.05"
                    android:textColor="@drawable/question_navigation_button_colour"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    android:text="@string/next_btn_txt" />
            </LinearLayout>


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/submitProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_16dp"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/submitted_questions_progress" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/questionsViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitProgress"
        tools:listitem="@layout/survey_item_layout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateBehavior="repeat"
        android:indeterminateTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>